# serwis_samochodow

./: CMakeLists.txt  KOBYLARCZYK_MATEUSZ_155279_opis_SERWIS_SAMOCHODOW.md  TESTS.md  config.h  dashboard.cpp  ipc.h  kasjer.cpp  kierowca.cpp  kierownik.cpp  komunikaty.h  logger.cpp  logger.h  main.cpp  mechanik.cpp  model.cpp  model.h  pracownik_serwisu.cpp  serwis_ipc.cpp  serwis_ipc.h  stanowiska_status.cpp  stanowiska_status.h  time_scale.h  ui.cpp  ui.h  wait_utils.h
configs/: T1.cfg  T2.cfg  T3.cfg  T4.cfg  T5.cfg
tests/: test_model.cpp
